--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,7 +72,7 @@ jobs:
       # Configure optional tutor plugins
       # ---------------------------------------------------------------------------------
       - name: Enable tutor plugin - S3
-        uses: openedx-actions/tutor-enable-plugin-s3
+        uses: openedx-actions/tutor-enable-plugin-s3@v0.0.1
         if: ${{ env.ENABLE_S3 == 'true' }}
         with:
           namespace: openedx-prod
