--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@
 # usage: top-level workflow. Initiated manually from Github Actions console page
 #        Builds all Docker containers.
 #------------------------------------------------------------------------------
-name: Build Containers and upload to AWS ECR
+name: Build Containers
 
 on:
   workflow_dispatch:
