--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -5,7 +5,7 @@
 # usage: top-level workflow. Initiated manually from Github Actions console page
 #        Deploys a Tutor-created openedx Docker image to the Kubernetes cluster.
 #------------------------------------------------------------------------------
-name: Deploy Open edX prod to Kubernetes
+name: Deploy prod
 
 on:
   workflow_dispatch:
