--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -40,6 +40,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3.0.2
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1.6.1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
       # ---------------------------------------------------------------------------------
       # initialize workflow environment variables
       # ---------------------------------------------------------------------------------
