--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -145,9 +145,13 @@ jobs:
 
       - name: Configure Redis
         uses: openedx-actions/tutor-service-configure-redis@v0.0.2
+        with:
+          namespace: openedx-prod
 
       - name: Configure MySQL
         uses: openedx-actions/tutor-service-configure-mysql@v0.0.2
+        with:
+          namespace: openedx-prod
 
       - name: Dump the config
         shell: bash
