--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -27,14 +27,14 @@ jobs:
       # feature flags for optional tutor modules
       # --------------------------------------------
       ENABLE_S3: true
-      ENABLE_BACKUP: true
-      ENABLE_DISCOVERY: true
+      ENABLE_BACKUP: false
+      ENABLE_DISCOVERY: false
       ENABLE_MFE: true
-      ENABLE_CREDENTIALS: true
-      ENABLE_XQUEUE: true
-      ENABLE_NOTES: true
-      ENABLE_ECOMMERCE: true
-      ENABLE_FORUM: true
+      ENABLE_CREDENTIALS: false
+      ENABLE_XQUEUE: false
+      ENABLE_NOTES: false
+      ENABLE_ECOMMERCE: false
+      ENABLE_FORUM: false
 
     steps:
       - name: Checkout
