--- a/.github/actions/tutor/print-dump/action.yml
+++ b/.github/actions/tutor/print-dump/action.yml
@@ -10,6 +10,14 @@ branding:
 runs:
   using: "composite"
   steps:
+    - name: pip list
+      shell: bash
+      continue-on-error: true
+      run: |-
+        echo 'pip list:'
+        echo '-------------------------------------'
+        pip list
+
     - name: Dump tutor config apps folder
       shell: bash
       continue-on-error: true
