--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -89,7 +89,7 @@ jobs:
           namespace: openedx-prod
 
       - name: Enable tutor plugin - Backup
-        uses: openedx-actions/tutor-plugin-enable-backup@v0.0.1
+        uses: openedx-actions/tutor-plugin-enable-backup@v0.0.2
         if: ${{ env.ENABLE_BACKUP == 'true' }}
         with:
           aws-ecr-uri: ${AWS_ECR_REPOSITORY_BACKUPS}
@@ -186,6 +186,7 @@ jobs:
 
 
       # ---------------------------------------------------------------------------------
+      # MCDANIEL: THIS SHOULD NOT BE NECESSARY.
       # force plugins to be enabled
       # ---------------------------------------------------------------------------------
       - name: Enable tutor plugin - Forum II
