--- a/.github/actions/tutor/k8s/init/action.yml
+++ b/.github/actions/tutor/k8s/init/action.yml
@@ -166,4 +166,5 @@ runs:
     - name: Save tutor configuration data
       shell: bash
       run: |-
+        tutor plugins disable all
         tutor config save
