--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -88,6 +88,9 @@ jobs:
         with:
           namespace: openedx-prod
 
+      - name: Dump tutor config.yml
+        uses: ./.github/actions/tutor/print-config
+
       - name: Enable tutor plugin - Backup
         uses: openedx-actions/tutor-plugin-enable-backup@v0.0.2
         if: ${{ env.ENABLE_BACKUP == 'true' }}
