--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -26,17 +26,15 @@ jobs:
 
       # feature flags for optional tutor modules
       # --------------------------------------------
-      ENABLE_FORUM: true
-      ENABLE_DISCOVERY: true
-      ENABLE_XQUEUE: true
-      ENABLE_NOTES: true
-      ENABLE_ECOMMERCE: true
-      ENABLE_S3: true
+      ENABLE_BACKUP: true
       ENABLE_CREDENTIALS: true
-
-      ENABLE_MFE: false
-      ENABLE_BACKUP: false
-
+      ENABLE_DISCOVERY: true
+      ENABLE_ECOMMERCE: true
+      ENABLE_FORUM: true
+      ENABLE_MFE: true
+      ENABLE_NOTES: true
+      ENABLE_S3: true
+      ENABLE_XQUEUE: true
 
     steps:
       - name: Checkout
